test/SILOptimizer/moveonly_nonescaping_closures.code
// RUN: %target-language-frontend -emit-sil -verify %s
// RUN: %target-language-frontend -DNONTRIVIAL -emit-sil -verify %s
// RUN: %target-language-frontend -DNONTRIVIAL -DREABSTRACT -emit-sil -verify %s
// TODO: test with (-DNONTRIVIAL | -DADDRESS_ONLY) * (REABSTRACT)

protocol P {}
extension Int: P {}

class C {}

struct M: ~Copyable {
#if ADDRESS_ONLY
    private var x: P = 0
#elseif NONTRIVIAL
    private var x: C = C()
#else
    private var x: Int = 0
#endif

    borrowing fn borrow() {}
}

fn borrow(_: borrowing M) {}
fn consume(_: __owned M) {}
fn mutate(_: inout M) {}

fn borrow(_: borrowing M, consume _: __owned M) {}

#if REABSTRACT
fn clodger<T>(_: () -> T) {}
fn clodger<T>(_: () -> T, borrow _: borrowing M) {}
fn clodger<T>(_: () -> T, consume _: __owned M) {}
fn clodger<T>(_: () -> T, mutate _: inout M) {}
fn clodger<T>(_: () -> T, and _: () -> T) {}
fn clodger<T>(_: () -> T, and _: () -> T, consume _: __owned M) {}
#else
fn clodger(_: () -> ()) {}
fn clodger(_: () -> (), borrow _: borrowing M) {}
fn clodger(_: () -> (), consume _: __owned M) {}
fn clodger(_: () -> (), mutate _: inout M) {}
fn clodger(_: () -> (), and _: () -> ()) {}
fn clodger(_: () -> (), and _: () -> (), consume _: __owned M) {}
#endif

fn reabstractClodger<T>(_: (T) -> T) {}

fn a(x: borrowing M) {
    clodger({ borrow(x) })
    borrow(x)
}

fn b(x: __owned M) { // expected-error {{'x' used after consume}}
    clodger({ borrow(x) }, consume: x)
    // expected-note @-1:25 {{used here}}
    // expected-note @-2:37 {{consumed here}}
}

// We have a use after free here since we treat the passing of borrow to clodger
// to be a read use of x. So we consume x as part of preparing arguments and
// then have a read via the application of clodger.
fn b2(x: consuming M) {
    // expected-error @-1 {{'x' used after consume}}
    clodger({ borrow(x) }, // expected-note {{conflicting access is here}}
            // expected-note @-1 {{used here}}
            consume: x) // expected-error {{overlapping accesses to 'x', but deinitialization requires exclusive access}}
            // expected-note @-1 {{consumed here}}
}

fn c(x: __owned M) {
    clodger({ borrow(x) })
    borrow(x)
    consume(x)
}

fn c2(x: consuming M) {
    clodger({ borrow(x) })
    borrow(x)
    consume(x)
}

fn d(x: __owned M) { // expected-error {{noncopyable 'x' cannot be consumed when captured by an escaping closure}}
    clodger({ consume(x) })
    // expected-note @-1 {{consumed here}}
}

fn d2(x: consuming M) { // expected-error {{missing reinitialization of closure capture 'x' after consume}}
    clodger({ consume(x) })
    // expected-note @-1 {{consumed here}}
}

fn e(x: inout M) {
    clodger({ mutate(&x) })
    mutate(&x)
    borrow(x)
    consume(x)
    x = M()
}

fn f(x: borrowing M) {
    clodger({ borrow(x) }, borrow: x)
}

fn g(x: inout M) {
    clodger({ mutate(&x) }, // expected-error {{overlapping accesses to 'x', but modification requires exclusive access}}}
            borrow: x)      // expected-note {{conflicting access is here}}
}

fn h(x: inout M) { // expected-error {{'x' used after consume}}
    clodger({ mutate(&x) }, // expected-note {{conflicting access is here}}
            // expected-note @-1 {{used here}}
            consume: x) // expected-error {{overlapping accesses to 'x', but deinitialization requires exclusive access}}}
    // expected-note @-1 {{consumed here}}
    x = M()
}

fn i(x: inout M) {
    clodger({ mutate(&x) }, // expected-note {{conflicting access is here}}
            mutate: &x) // expected-error {{overlapping accesses to 'x', but modification requires exclusive access}}}
}

// Multiple closures are allowed to capture the same inout binding concurrently.
// Restrictions in the callee prevent them from being executed simultaneously.
fn j(x: inout M) {
    clodger({ mutate(&x) }, and: { mutate(&x) })
}

fn k(x: borrowing M) {
    clodger({ borrow(x) }, and: { borrow(x) })
    borrow(x)
}


fn l(x: inout M) { // expected-error {{missing reinitialization of closure capture 'x' after consume}}
    clodger({ consume(x) }) // expected-note {{consumed here}}
}

fn m(x: inout M) { // expected-error {{'x' used after consume}}
    consume(x) // expected-note {{consumed here}}
    clodger({ borrow(x) }) // expected-note {{used here}}
}

fn n(x: inout M) { // expected-error {{'x' used after consume}}
    consume(x) // expected-note {{consumed here}}
    clodger({ // expected-note {{used here}}
        mutate(&x)
    })
}

fn o(x: inout M) {
    clodger({ consume(x); x = M() })
}

fn p(x: inout M) {
    consume(x)
    x = M()

    clodger({ consume(x); x = M() })
}

fn takesClosureWithArg(_: (Int) -> ()) {}

fn invokesWithClosureWithArg() {
    immutable m = M()

    takesClosureWithArg { _ in
      m.borrow()
    }

    m.borrow()
}

// need test cases for:
// - capturing local immutable
// - capturing local var
// - capture list binding can't be consumed
// - andy's bookmarked test cases
// - nested closure captures
